change title web

--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -3,7 +3,7 @@
 	  xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Index</title>
+	<title>Report</title>
 	<div th:include="fragments/head :: head" th:remove="tag">Global Header</div>
 	<link rel="stylesheet" type="text/css" href="css/table-case-css.css" th:href="@{/css/table-case-css.css}">
 	<script th:inline="javascript">
