--- a/src/main/resources/templates/userManagement.html
+++ b/src/main/resources/templates/userManagement.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Index</title>
+    <title>User Management</title>
     <div th:include="fragments/head :: head" th:remove="tag">Global Header</div>
     <link rel="stylesheet" type="text/css" href="css/table-case-css.css" th:href="@{/css/table-case-css.css}">
 </head>
