add show department in user view page

--- a/src/main/resources/templates/userView.html
+++ b/src/main/resources/templates/userView.html
@@ -57,6 +57,15 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-tab-10"></div>
+        <div class="col-10">
+            <label>Department : </label>
+        </div>
+        <div class="col-65">
+            <label th:text="*{user.department}">department</label>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-10"></div>
         <div class="col-10">
             <label>Role :</label>
