--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -95,7 +95,7 @@
 	<div class="row">
 		<div class="col-tab-10"></div>
 		<div class="col-15">
-			<label>จำนวนงานที่เสร็ดสิ้น</label>
+			<label>จำนวนงานที่เสร็จสิ้น</label>
 		</div>
 		<div class="col-20">
 			<label th:text="*{sJob}">startDate</label>
